add learning assessment

--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -44,5 +44,24 @@ pulse_df =
   mutate(visit = replace(visit, visit == "bl", "00m"))
 ```
 
+## Revisit FAS_litters
 
+```{r}
+litters_data = read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  separate(group, into = c("dose", "day"), 3) 
+```
+
+## Learning Assessment
+
+Write a chain that retains only litter_number, gd0_weight and gd18_weight; makes gd a numeric variable with values 0 and 18
+
+```{r}
+litters_data_assessment = read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  select(litter_number, ends_with("weight")) %>%
+  gather(key = "gest_day", value = "weight", gd0_weight:gd18_weight) %>%
+  mutate(gest_day = recode(gest_day, "gd0_weight" = 0, "gd18_weight" = 18)) %>%
+  arrange(litter_number) 
+```
 
