--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -65,3 +65,21 @@ litters_data_assessment = read_csv("./data/FAS_litters.csv", col_types = "ccddii
   arrange(litter_number) 
 ```
 
+```{r}
+analysis_result = tibble(
+  group = c("treatment", "treatment", "placebo", "placebo"),
+  time = c("pre", "post", "pre", "post"),
+  mean = c(4, 8, 3.5, 4)
+)
+```
+
+Make it readable
+
+```{r}
+analysis_result %>%
+  spread(key = time, value = mean) %>%
+  knitr::kable()
+```
+
+
+
